implemented answer repository, service and handlers
